# E-Yantra

./: 1.py  12TSK2B SERVER  41.py  8PointServer.py  BUTTER SERVER  BasePID.py  Detected T2B Client  Detected T2B SERVER  Detected T2B Waypoint  KD_1894_TASK_4B.py  KD_1894_pico_server.py  KD_1894_task_1a.py  LatestServer  Task1a_new.py  Task2b_pico client  Task2b_pico server  Task_2B Waypoint.service.py  f2.py  normal.xml  old_code.py  pico_client.py  pico_controller_PID.py  pico_server.py  task1a.py  task1a_updated.py  task2b_waypoint service  task_1b_1894.py  v3.py  waypoint_service.py  xyz.py
Dont Modify/: MK PICO CLIENT  MK PICO SERVER  NS2  NavToWaypoint.action  ne.py  new.py  pico_client.py  pico_server.py
KD_1894_task_2a/: CMakeLists.txt  Fixed PICO SERVER  NEAR SUCCESS CLIENT  NEAR SUCCESS SERVER  NEW PID Controller  mk_pid  pico_controller_PID.py  waypoint_service.py
kd_task_1b/: Task2APID  package.xml  setup.cfg  setup.py
swift_pico/: CMakeLists.txt
swift_pico/launch/: task_0.launch.py  task_2a.launch.py  task_2b.launch.py
swift_pico/src/: pico_client.py  pico_controller_LQR.py  pico_controller_PID.py  pico_server.py  waypoint_service.py
swift_pico/worlds/: empty.sdf  swift_pico.sdf  swift_pico_2b.sdf
waypoint_navigation/: CMakeLists.txt  package.xml
waypoint_navigation/srv/: GetWaypoints.srv
